# LLM-Questionnaires

./: .gitignore  Makefile  README.md  Survey.ipynb  config.py  pyproject.toml
_lib/: inference.py
data/big_5/: questionnaire.json  questionnaire_cycled.json  questionnaire_inverted.json  survey.csv  survey.json
data/humor_styles/: questionnaire_grouped.json  questionnaire_inverted.json
data/moral_foundations/: collections.json  questionnaire_inverted.json  questionnaire_negated.json  surveys.json
data/moral_foundations_2/: collections.json  questionnaire.json  questionnaire_inverted.json
data/moral_foundations_response_bias/: questionnaire_old.json  surveys_old.json
data/personas/: base.json  conservative.json  english.liberal.json  english.moderate.json
data/questionnaires/moral-foundations/: mapping.json  questions.json  survey.json  survey.trier.json
data/questionnaires/moral_foundations/: questionnaire.json
data/questionnaires/sosec/: questions.json
examples/: 00--Message-Chat.ipynb  00--Questionnaire.ipynb
experiments/00--Base-Models/: Experiment.ipynb
experiments/00--Base-Models/data/: cross_evaluation.parquet  survey.parquet  survey.report.txt
experiments/01--Naive-Personas-Survey/: 01--Survey-Generation.ipynb  02--Survey-Aggregation.ipynb  03--Reporting.ipynb  Experiment.ipynb
experiments/01--Naive-Personas-Survey/data/: dataset.agg.dimension.parquet  dataset.parquet  (+5 more)
experiments/02--Value-Driven-Personas/: Experiment.ipynb  Playground.ipynb
experiments/03--Moral-Foundations-2/: Experiment.ipynb  survey.report.txt
experiments/XX--Preliminaries/: Human-Distance.ipynb
experiments/moral_foundations_2/: Visualization.ipynb  __playground.ipynb  __playground.py  experiment.py
notebooks/: Questionnaire-Answering.ipynb  Questionnaire-Evaluation.ipynb
report/moral-foundations/: agg.evaluation.parquet  agg.responses.parquet  report.questionnaire.txt  tab.questionnaire.evaluation.html  tab.questionnaire.evaluation.tex  tab.questionnaire.var.agg.tex  tab.questionnaire.var.html  tab.questionnaire.var.persona.dimension.tex  tab.questionnaire.var.question.model.html
report/sosec/: report.questionnaire.txt  tab.questionnaire.mean.html  tab.questionnaire.mean.tex  tab.questionnaire.var.agg.tex  tab.questionnaire.var.html  tab.questionnaire.var.question.model.html  tab.questionnaire.var.question.model.tex  tab.questionnaire.var.question.persona.html  tab.questionnaire.var.question.persona.tex  tab.questionnaire.var.tex
reports/: Comparison-Naive-and-Data-Driven.ipynb
results/: gemma2-27b-instruct-q6_K.json  llama3-70b-instruct-q6_K.json  llama3.1-70b-instruct-q6_K.json  mistral-7b-instruct-v0.2-q6_K.json  mistral-large-123b-instruct-2407-q6_K.json  phi3-14b-medium-128k-instruct-q6_K.json  qwen2-72b-instruct-q6_K.json
setup/: experiment.json  prompt.txt
src/: __init__.py  api.py  persona.py  questionnaire.py
src/llm_moral_values/: __init__.py  persona.py  schemas.py
src/llm_questionnaires/: __init__.py  _constants.py  agent.py  pipeline.py  questionnaire.py  survey.py
tests/: conftest.py  test_agent.py  test_pipeline.py  test_questionnaire.py
tests/fixtures/: questionnaire.json
(+70458 files in other folders)
