[tool.poetry]
name = "LLM-Moral-Values"
version = "0.1.0"
description = ""
authors = ["Simon Münker <muenker@uni-trier.de>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pydantic = "^2.7.4"
tqdm = "^4.66.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
pyarrow = "^16.1.0"
seaborn = "^0.13.2"
rich = "^13.8.0"
cltrier-lib = "^0.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
mypy = "^1.11.2"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "UP", "A", "PL"]

[tool.mypy]
files = "src/llm_moral_values"
disable_error_code = "import-untyped"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
