[tool.poetry]
name = "LLM-Questionnaires"
version = "0.1.0"
description = ""
authors = ["Simon Münker <muenker@uni-trier.de>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
rich = "^13.8.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
cltrier-lib = "^0.1.8"

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.1.1"
seaborn = "^0.13.2"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pylint = {extras = ["spelling"], version = "^3.3.4"}
pylint-pydantic = "^0.3.5"
ruff = "^0.9.4"

[tool.ruff.lint]
select = ["I", "N", "UP", "A", "PL"]

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.mccabe",
    "pylint_pydantic",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
