[project]
name = "LLM-Questionnaires"
version = "0.1.0"
description = "A framework for evaluating intrinsic bias in Large Language Models (LLMs) and their capacity to represent diverse ideological and cultural perspectives through in-context prompting techniques."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Simon Münker", email = "muenker@uni-trier.de" }
]
dependencies = [
    "rich (>=13.9.4,<14.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-ai (>=0.0.36,<0.1.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]

[project.optional-dependencies]
notebook = [
    "jupyter (>=1.1.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)"
]
development = [
    "pytest (>=8.3.5,<9.0.0)",
    "pylint[spelling] (>=3.3.5,<4.0.0)", 
    "pylint-pydantic (>=0.3.5,<0.4.0)", 
    "ruff (>=0.9.10,<0.10.0)"
    ]

[project.urls]
repository = "https://github.com/simon-muenker/LLM-Questionnaires"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"
testpaths = [
    "tests",
]

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.mccabe",
    "pylint_pydantic",
]

[tool.ruff]
line-length = 96

[tool.ruff.lint]
select = ["I", "N", "A", "PL"]
